2010-05-13  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Raise the CollectionChanged event
	  when adding a new item and add a test on it. Fixes more of
	  232.

2010-05-13  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Add extra tests to ensure that we
	  emit PropertyChanged events correctly for CurrentItem and
	  CurrentPosition. Both fields need to be updated before any
	  event is raised.

2010-05-12  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: This bit wasn't supposed to be
	  part of my last commit. Fixes the regressions in moon-unit
	  and 232 caused by my last commit.

2010-05-12  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: When we add a new item to the ICV
	  we need to refresh it. We also need to keep that item
	  selected after we refresh.

2010-05-12  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: When we call AddNew we need to
	  select the new item automatically. We also need to throw
	  exceptions if we try to CommitNew or CancelNew while
	  editing. Fixes another few tests in 232.

2010-05-12  Alan McGovern  <amcgovern@novell.com>

	* CollectionViewSource.cs: Call the factory method to create
	  the correct type of collection view.

	* CollectionView.cs: Add a CollectionView class which contains
	  a factory method to create the correct ICollectionView for a
	  given source collection.

	* EnumerableCollectionView.cs: Add a new
	  EnumerableCollectionView which works with IEnumerables which
	  are not ILists.

	* StandardCollectionView.cs: Refactor StandardCollectionView
	  so that it only accepts an IList.

2010-05-12  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Refactor StandardCollectionView
	  so that we only use the filtered list when we are grouping,
	  filtering or sorting. Fixes more of 232 and the new
	  moon-units.

2010-05-11  Alan McGovern  <amcgovern@novell.com>
