@@ -264,7 +264,8 @@ namespace System.Windows.Data {
 
 		bool AddToFiltered (object item)
 		{
-			if (Filter == null || Filter (item)) {
+			// If we're adding a new item, we bypass the filter at this step.
+			if (Filter == null || CurrentAddItem != null || Filter (item)) {
 				filteredList.Add (item);
 				return true;
 			}
@@ -500,7 +501,32 @@ namespace System.Windows.Data {
 					RootGroup.RemoveItem (CurrentAddItem);
 					RootGroup.AddInSubtree (CurrentAddItem, Culture, GroupDescriptions);
 				}
-				Refresh ();
+
+				if (Filter != null && !Filter (CurrentAddItem)) {
+					RemoveFromSourceCollection (CurrentAddItem);
+					RootGroup.RemoveInSubtree (CurrentAddItem);
+					if (CurrentItem == CurrentAddItem)
+						MoveCurrentTo (CurrentPosition - 1);
+				} else {
+					// The item was not filtered out of the tree. Do we need to resort it?
+					if (SortDescriptions.Count > 0) {
+						// The newly added item is at the end of the array. If we're sorting, we may have to move it.
+						// Use a binary search to figure out where the item should be in the list and put it in there.
+						int actualIndex = SourceCollection.IndexOf (CurrentAddItem);
+						int sortedIndex = filteredList.BinarySearch (0, filteredList.Count - 1, CurrentAddItem, new PropertyComparer (SortDescriptions));
+						if (sortedIndex < 0)
+							sortedIndex = ~sortedIndex;
+
+						if (actualIndex != sortedIndex) {
+							filteredList.RemoveAt (actualIndex);
+							filteredList.Insert (sortedIndex, CurrentAddItem);
+							RaiseCollectionChanged (new NotifyCollectionChangedEventArgs (NotifyCollectionChangedAction.Remove, currentAddItem, actualIndex));
+							RaiseCollectionChanged (new NotifyCollectionChangedEventArgs (NotifyCollectionChangedAction.Add, currentAddItem, sortedIndex));
+							if (CurrentAddItem == CurrentItem)
+								UpdateCurrentPositionAndItem (sortedIndex, CurrentAddItem);
+						}
+					}
+				}
 				CurrentAddItem = null;
 				IsAddingNew = false;
 			}
